# algosim

./: .gitignore  README.md  outline.md  pyproject.toml  requirements.txt
configs/: default.yaml
rt_sim/: __init__.py  app_streamlit.py  broker.py  cli.py  metrics.py  models.py  simulator.py  strategy_host.py  transport.py  utils.py
strategies/sma_crossover/: run_sma.py  strategy.py
tests/: test_metrics.py  test_ou.py  test_transport.py
